--- a/DCS.Alternative.Launcher/Windows/MainWindow.xaml
+++ b/DCS.Alternative.Launcher/Windows/MainWindow.xaml
@@ -1,52 +1,68 @@
 ﻿<Window x:Class="DCS.Alternative.Launcher.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:controls="clr-namespace:DCS.Alternative.Launcher.Controls"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:fw="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         Title="DCS Alternative Launcher"
-        Width="1300"
-        Height="675"
-        MinWidth="1300"
-        MinHeight="675"
-        MaxWidth="1300"
-        MaxHeight="675"
+        Width="1200"
+        Height="760"
+        MinWidth="1200"
+        MinHeight="760"
+        MaxWidth="1200"
+        MaxHeight="760"
+        Background="Black"
         WindowStartupLocation="CenterScreen"
         WindowStyle="None"
         mc:Ignorable="d">
     <WindowChrome.WindowChrome>
-        <WindowChrome CaptionHeight="80"
+        <WindowChrome CaptionHeight="105"
                       CornerRadius="0"
                       GlassFrameThickness="0"
                       ResizeBorderThickness="0"
                       UseAeroCaptionButtons="False" />
     </WindowChrome.WindowChrome>
-    <Border BorderBrush="#FF2F2F2F" BorderThickness="1">
+    <Window.Resources>
+        <SolidColorBrush x:Key="BorderAccentBrush" Color="#FF5F5F5F" />
+    </Window.Resources>
+    <Border BorderBrush="{StaticResource BorderAccentBrush}" BorderThickness="1">
         <Grid>
-            <Image x:Name="BackgroundImage"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center"
-                   Source="/Images/background.jpg"
-                   Stretch="UniformToFill" />
-            <Image Width="250"
-                   Height="150"
-                   Margin="50"
-                   HorizontalAlignment="Right"
-                   VerticalAlignment="Bottom"
-                   RenderOptions.BitmapScalingMode="HighQuality"
-                   RenderOptions.EdgeMode="Aliased"
-                   Source="/Images/dcs-world-logo.png"
-                   Stretch="Uniform">
-                <Image.Effect>
-                    <DropShadowEffect BlurRadius="3" ShadowDepth="0" />
-                </Image.Effect>
-            </Image>
+            <Grid x:Name="BackgroundImage">
+                <controls:TransitionControl Content="{Binding ImageUrl.Value}">
+                    <controls:TransitionControl.ContentTemplate>
+                        <DataTemplate>
+                            <Image HorizontalAlignment="Center"
+                                   VerticalAlignment="Center"
+                                   Source="{Binding}"
+                                   Stretch="UniformToFill" />
+                        </DataTemplate>
+                    </controls:TransitionControl.ContentTemplate>
+                </controls:TransitionControl>
+                <Image HorizontalAlignment="Center"
+                       VerticalAlignment="Center"
+                       Source="/Images/Overlay.png"
+                       Stretch="Fill" />
+                <Image Width="250"
+                       Height="150"
+                       Margin="50"
+                       HorizontalAlignment="Right"
+                       VerticalAlignment="Bottom"
+                       RenderOptions.BitmapScalingMode="HighQuality"
+                       RenderOptions.EdgeMode="Aliased"
+                       Source="/Images/dcs-world-logo.png"
+                       Stretch="Uniform">
+                    <Image.Effect>
+                        <DropShadowEffect BlurRadius="3" ShadowDepth="0" />
+                    </Image.Effect>
+                </Image>
+            </Grid>
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="80" />
+                    <RowDefinition Height="105" />
                     <RowDefinition />
                 </Grid.RowDefinitions>
-                <Border BorderBrush="#FF2F2F2F" BorderThickness="0,0,0,1">
+                <Border BorderBrush="{StaticResource BorderAccentBrush}" BorderThickness="0,0,0,1">
                     <Grid>
                         <fw:AcrylicPanel NoiseOpacity="0"
                                          Target="{Binding ElementName=BackgroundImage}"
@@ -86,7 +102,8 @@
                                                     Style="{StaticResource ButtonRevealStyle}"
                                                     WindowChrome.IsHitTestVisibleInChrome="True">
                                                 <TextBlock FontFamily="{StaticResource Prototype}"
-                                                           FontSize="18"
+                                                           FontSize="24"
+                                                           FontWeight="Normal"
                                                            Text="{Binding Name}">
                                                     <TextBlock.Effect>
                                                         <DropShadowEffect BlurRadius="8" ShadowDepth="0" />
@@ -117,11 +134,11 @@
                     </Grid>
                 </Border>
                 <Grid Grid.Row="1">
-                    <ContentControl x:Name="NavigationFrame"
-                                    HorizontalAlignment="Stretch"
-                                    VerticalAlignment="Stretch"
-                                    HorizontalContentAlignment="Stretch"
-                                    VerticalContentAlignment="Stretch" />
+                    <controls:TransitionControl x:Name="NavigationFrame"
+                                                HorizontalAlignment="Stretch"
+                                                VerticalAlignment="Stretch"
+                                                HorizontalContentAlignment="Stretch"
+                                                VerticalContentAlignment="Stretch" />
                 </Grid>
             </Grid>
         </Grid>
