--- a/DCS.Alternative.Launcher/Plugins/Settings/Views/Advanced/CameraSettingsView.xaml
+++ b/DCS.Alternative.Launcher/Plugins/Settings/Views/Advanced/CameraSettingsView.xaml
@@ -21,6 +21,9 @@
             <RowDefinition />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
+        <TextBlock Grid.Row="0"
+                   Margin="10"
+                   Text="None of these have been tested so please use at your own risk, complete WIP!" />
         <Border Grid.Row="1"
                 Background="#40000000"
                 BorderBrush="#FF2F2F2F"
