Fixed first use wizard background

--- a/DCS.Alternative.Launcher/Wizards/FirstUseWizard.xaml
+++ b/DCS.Alternative.Launcher/Wizards/FirstUseWizard.xaml
@@ -34,7 +34,7 @@
                 <Image x:Name="BackgroundImage"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"
-                       Source="/Images/background.jpg"
+                       Source="/Images/Wizard/FirstUse.png"
                        Stretch="UniformToFill" />
                 <Border>
                     <Border.Background>
