--- a/DCS.Alternative.Launcher/Plugins/Manuals/Views/ManualsView.xaml
+++ b/DCS.Alternative.Launcher/Plugins/Manuals/Views/ManualsView.xaml
@@ -41,12 +41,19 @@
     </UserControl.Resources>
     <Grid>
         <Grid.Resources>
-            <data:StringFormatConverter x:Key="StringFormatConverter" DefaultFormatString="N0" />
+            <data:StringFormatConverter x:Key="StringFormatConverter" DefaultFormatString="N 0" />
             <data:BooleanToStringConverter x:Key="BooleanToStringConverter"
                                            FalseString="OFF"
                                            TrueString="ON" />
-            <Style TargetType="{x:Type ItemsControl}">
+            <Style x:Key="TileStyle" TargetType="{x:Type ItemsControl}">
 
+                <Setter Property="ItemsPanel">
+                    <Setter.Value>
+                        <ItemsPanelTemplate>
+                            <WrapPanel ItemWidth="555" Orientation="Horizontal" />
+                        </ItemsPanelTemplate>
+                    </Setter.Value>
+                </Setter>
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type ItemsControl}">
@@ -71,6 +78,7 @@
                         </ControlTemplate>
                     </Setter.Value>
                 </Setter>
+                <Setter Property="FontSize" Value="14" />
                 <Setter Property="Foreground" Value="#FFFFFFFF" />
                 <Setter Property="Cursor" Value="Hand" />
                 <Style.Triggers>
@@ -91,6 +99,7 @@
                     </Trigger>
                 </Style.Triggers>
             </Style>
+            <data:UriToBitmapConverter x:Key="UriToBitmapConverter" />
         </Grid.Resources>
 
         <Border Margin="30"
@@ -101,76 +110,103 @@
                                     Target="{x:Static windows:MainWindow.AcrylicSource}"
                                     TintColor="#33000000"
                                     TintOpacity="1">
-                <ItemsControl ItemsSource="{Binding ModuleDocuments}">
+                <ItemsControl ItemsSource="{Binding ModuleDocuments}" Style="{StaticResource TileStyle}">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <Border Margin="0,10"
+                            <Border Margin="10,10"
+                                    Padding="0,0,0,10"
+                                    Background="#48000000"
                                     BorderBrush="#FF8F8F8F"
-                                    Padding="0 0 0 10"
-                                    BorderThickness="0,0,0,1">
+                                    BorderThickness="1">
 
                                 <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="Auto" />
-                                        <ColumnDefinition />
-                                    </Grid.ColumnDefinitions>
                                     <Grid.RowDefinitions>
-                                        <RowDefinition />
+                                        <RowDefinition Height="Auto" />
                                         <RowDefinition />
                                     </Grid.RowDefinitions>
-                                    <Image Grid.RowSpan="2"
-                                           Width="75"
-                                           Height="75"
-                                           HorizontalAlignment="Left"
+                                    <Image Grid.Row="0"
+                                           Grid.Column="0"
+                                           Width="310"
+                                           HorizontalAlignment="Center"
                                            VerticalAlignment="Top"
-                                           Source="{Binding Module.IconPath}"
+                                           Source="{Binding Module.MainMenuLogoPath, Converter={StaticResource UriToBitmapConverter}, ConverterParameter=200}"
                                            Stretch="Uniform" />
-                                    <Grid Grid.Row="0"
-                                          Grid.Column="1"
-                                          Margin="0,7,0,5">
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="Auto" />
-                                            <RowDefinition Height="Auto" />
-                                        </Grid.RowDefinitions>
+                                    <Grid Grid.Row="1">
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition />
-                                            <ColumnDefinition Width="Auto" />
+                                            <ColumnDefinition />
                                         </Grid.ColumnDefinitions>
-                                        <TextBlock Grid.Row="0"
-                                                   Margin="0,0,0,0"
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto" />
+                                            <RowDefinition />
+                                        </Grid.RowDefinitions>
+                                        <TextBlock Margin="10,0"
                                                    FontFamily="{StaticResource Prototype}"
                                                    FontSize="16"
-                                                   Foreground="#FFFFFFFF">
-                                            <Run Text="{Binding Module.DisplayName, Mode=OneWay}" />
-                                        </TextBlock>
+                                                   Foreground="#FFFFFFFF"
+                                                   Text="DOCUMENTATION" />
+                                        <ItemsControl Grid.Row="1"
+                                                      Grid.Column="0"
+                                                      Margin="10"
+                                                      ItemsSource="{Binding Documents}">
+                                            <ItemsControl.ItemTemplate>
+                                                <DataTemplate>
+                                                    <Grid Margin="0,5">
+                                                        <Grid.ColumnDefinitions>
+                                                            <ColumnDefinition Width="Auto" />
+                                                            <ColumnDefinition />
+                                                        </Grid.ColumnDefinitions>
+                                                        <Image Height="24"
+                                                               HorizontalAlignment="Left"
+                                                               VerticalAlignment="Top"
+                                                               Source="/Resources/Icons/adobe-pdf-icon.png"
+                                                               Stretch="Uniform" />
+                                                        <Button Grid.Column="1"
+                                                                Margin="5,0"
+                                                                VerticalAlignment="Center"
+                                                                Command="{Binding DataContext.OpenDocumentCommand, RelativeSource={RelativeSource AncestorType={x:Type views1:ManualsView}}}"
+                                                                CommandParameter="{Binding}"
+                                                                Content="{Binding Name}"
+                                                                Style="{StaticResource HyperlinkButton}" />
+                                                    </Grid>
+                                                </DataTemplate>
+                                            </ItemsControl.ItemTemplate>
+                                        </ItemsControl>
+                                        <TextBlock Grid.Row="0"
+                                                   Grid.Column="1"
+                                                   Margin="10,0"
+                                                   FontFamily="{StaticResource Prototype}"
+                                                   FontSize="16"
+                                                   Foreground="#FFFFFFFF"
+                                                   Text="ADDITIONAL RESOURCES" />
+                                        <ItemsControl Grid.Row="1"
+                                                      Grid.Column="1"
+                                                      Margin="10"
+                                                      ItemsSource="{Binding AdditionalResources}">
+                                            <ItemsControl.ItemTemplate>
+                                                <DataTemplate>
+                                                    <Grid Margin="0,5">
+                                                        <Grid.ColumnDefinitions>
+                                                            <ColumnDefinition Width="Auto" />
+                                                            <ColumnDefinition />
+                                                        </Grid.ColumnDefinitions>
+                                                        <Image Height="24"
+                                                               HorizontalAlignment="Left"
+                                                               VerticalAlignment="Top"
+                                                               Source="{Binding IconPath}"
+                                                               Stretch="Uniform" />
+                                                        <Button Grid.Column="1"
+                                                                Margin="5,0"
+                                                                VerticalAlignment="Center"
+                                                                Command="{Binding DataContext.OpenUrlCommand, RelativeSource={RelativeSource AncestorType={x:Type views1:ManualsView}}}"
+                                                                CommandParameter="{Binding Url}"
+                                                                Content="{Binding Name}"
+                                                                Style="{StaticResource HyperlinkButton}" />
+                                                    </Grid>
+                                                </DataTemplate>
+                                            </ItemsControl.ItemTemplate>
+                                        </ItemsControl>
                                     </Grid>
-
-                                    <ItemsControl Grid.Row="1"
-                                                  Grid.Column="1"
-                                                  ItemsSource="{Binding Documents}">
-                                        <ItemsControl.ItemTemplate>
-                                            <DataTemplate>
-                                                <Grid Margin="0,5">
-                                                    <Grid.ColumnDefinitions>
-                                                        <ColumnDefinition Width="Auto" />
-                                                        <ColumnDefinition />
-                                                    </Grid.ColumnDefinitions>
-                                                    <Image Height="24"
-                                                           HorizontalAlignment="Left"
-                                                           VerticalAlignment="Top"
-                                                           Source="/Resources/Icons/adobe-pdf-icon.png"
-                                                           Stretch="Uniform" />
-                                                    <Button Grid.Column="1"
-                                                            Margin="5,0"
-                                                            VerticalAlignment="Center"
-                                                            Command="{Binding DataContext.OpenDocumentCommand, RelativeSource={RelativeSource AncestorType={x:Type views1:ManualsView}}}"
-                                                            CommandParameter="{Binding}"
-                                                            Content="{Binding Name}"
-                                                            Style="{StaticResource HyperlinkButton}" />
-                                                </Grid>
-                                            </DataTemplate>
-                                        </ItemsControl.ItemTemplate>
-                                    </ItemsControl>
                                 </Grid>
                             </Border>
                         </DataTemplate>
