Changed play button to say update/play when updates are available Fixed a crash when checking if files exist under certain scenarios Started reference data building for ingame dcs options Started working About and Support screens

--- a/DCS.Alternative.Launcher/Plugins/Game/Views/GameView.xaml
+++ b/DCS.Alternative.Launcher/Plugins/Game/Views/GameView.xaml
@@ -407,7 +407,7 @@
                                                FontFamily="{StaticResource Prototype}"
                                                FontSize="18"
                                                Foreground="#8FFFFFFF"
-                                               Text="PLAY">
+                                               Text="{Binding PlayButtonText.Value}">
                                         <TextBlock.Effect>
                                             <DropShadowEffect BlurRadius="8" ShadowDepth="0" />
                                         </TextBlock.Effect>
