--- a/DCS.Alternative.Launcher/Plugins/Settings/Controls/OptionsControl.xaml
+++ b/DCS.Alternative.Launcher/Plugins/Settings/Controls/OptionsControl.xaml
@@ -17,6 +17,13 @@
                                            FalseString="OFF"
                                            TrueString="ON" />
             <Style TargetType="{x:Type ItemsControl}">
+                <Setter Property="ItemsPanel">
+                    <Setter.Value>
+                        <ItemsPanelTemplate>
+                            <VirtualizingStackPanel Orientation="Vertical" />
+                        </ItemsPanelTemplate>
+                    </Setter.Value>
+                </Setter>
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type ItemsControl}">
@@ -37,6 +44,43 @@
 
         <ItemsControl ItemsSource="{Binding Options}">
             <ItemsControl.Resources>
+                <DataTemplate DataType="{x:Type models:ComboBoxOptionModel}">
+                    <Grid Margin="20,5">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition Width="500" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+                        <TextBlock VerticalAlignment="Center"
+                                   FontFamily="{StaticResource Prototype}"
+                                   FontSize="16"
+                                   Foreground="#FFFFFFFF"
+                                   Text="{Binding DisplayName}" />
+                        <TextBlock Grid.Row="1"
+                                   Grid.Column="0"
+                                   Margin="0,3,0,0"
+                                   VerticalAlignment="Center"
+                                   FontFamily="{StaticResource Prototype}"
+                                   FontSize="14"
+                                   Foreground="#FFFFFFFF"
+                                   Text="{Binding Description}" />
+                        <ComboBox Grid.Row="0"
+                                  Grid.RowSpan="2"
+                                  Grid.Column="1"
+                                  Height="30"
+                                  MinWidth="120"
+                                  HorizontalAlignment="Right"
+                                  VerticalAlignment="Center"
+                                  VerticalContentAlignment="Center"
+                                  DisplayMemberPath="DisplayName"
+                                  FontSize="16"
+                                  ItemsSource="{Binding Items}"
+                                  SelectedItem="{Binding Value.Value}" />
+                    </Grid>
+                </DataTemplate>
                 <DataTemplate DataType="{x:Type models:TextOptionModel}">
                     <Grid Margin="20,5">
                         <Grid.ColumnDefinitions>
